fixed .toolbar-logo bleeding out of navbar

--- a/src/components/Navbar/style.css
+++ b/src/components/Navbar/style.css
@@ -15,10 +15,14 @@
 }
 
 .toolbar-logo {
+  display: flex;
   background-color: #084C61;
   color:#fff !important;
   margin-left: 5vw;
+  padding: 0 1rem;
   font-size: 1.25rem;
+  height: 100%;
+  align-items: center;
 }
 
 .spacer {
